bin_PROGRAMS=NetPacketCaptureServer
AM_CPPFLAGS=
NetPacketCaptureServer_DEPENDENCIES=
NetPacketCaptureServer_SOURCES=ArpCaptureThread.cpp DaemonProcess.cpp Definitions.cpp \
						LoadConfigEngine.cpp main.cpp ServerEngine.cpp \
						Session.cpp Util.cpp
NetPacketCaptureServer_LDFLAGS=-I../include \
								-I/usr/local/include \
								-lpthread \
								-lev \
								-ljsoncpp \
								-lcpp_common \
								-L/usr/local/lib/

